--- a/package.json
+++ b/package.json
@@ -7,9 +7,15 @@
   },
   "dependencies": {
     "express": "^4.14.1",
+    "mongoose": "^4.8.1",
     "morgan": "^1.8.0",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-loading": "0.0.9",
+    "react-redux": "^5.0.2",
+    "react-router": "^3.0.2",
+    "redux": "^3.6.0",
+    "redux-api-middleware": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
