--- a/package.json
+++ b/package.json
@@ -6,10 +6,17 @@
     "react-scripts": "0.8.5"
   },
   "dependencies": {
+    "body-parser": "^1.16.0",
+    "connect-mongodb-session": "^1.3.0",
     "express": "^4.14.1",
+    "express-session": "^1.15.0",
     "mongoose": "^4.8.1",
     "morgan": "^1.8.0",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.2.1",
+    "passport-local": "^1.0.0",
     "react": "^15.4.2",
+    "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.2",
     "react-loading": "0.0.9",
     "react-redux": "^5.0.2",
