--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "passport-local": "^1.0.0",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.7",
+    "react-bootstrap-table": "^2.11.2",
     "react-dom": "^15.4.2",
     "react-loading": "0.0.9",
     "react-redux": "^5.0.2",
