--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-loading": "0.0.9",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
+    "react-slick": "^0.14.6",
     "redux": "^3.6.0",
     "redux-api-middleware": "^1.0.2"
   },
